--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.8.11",
     "del": "~1.1.1",
+    "gulp": "^3.8.11",
     "gulp-csso": "^1.0.0",
     "gulp-if": "^1.2.5",
     "gulp-rename": "~1.2.2",
     "gulp-sass": "~1.3.3",
     "gulp-sourcemaps": "~1.5.1",
-    "gulp-uglify": "~1.2.0"
+    "gulp-uglify": "~1.2.0",
+    "gulp-useref": "^1.2.0"
   }
 }
