--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "del": "~1.1.1",
     "gulp": "^3.8.11",
     "gulp-csso": "^1.0.0",
+    "gulp-gh-pages": "^0.5.1",
     "gulp-if": "^1.2.5",
     "gulp-rename": "~1.2.2",
     "gulp-sass": "~1.3.3",
